# remote-factory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  SPEC.md  codecov.yml  factory.md  install.sh  mkdocs.yml  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: benchmark.yml  ceo-review.yml  ci.yml  eval-baseline.yml  nightly-release.yml  plugin.yml  plugins.yml
benchmarks/: factory_harbor_agent.py  featurebench-extra-instructions.md  lib.sh  run-featurebench.sh  run-programbench.sh  run-swebench.sh  run-terminalbench.sh  run.sh
docs/: ace.md  architecture.md  benchmarks.md  codex-mcp.md  configuration.md  contributing.md  eval.md  getting-started.md  index.md  runner-v2-spec.md  self-improvement.md  setup.md
docs/diagrams/: architecture.d2  data-flow.d2  eval-system.d2  experiment-lifecycle.d2  state-machine.d2
docs/expected-behaviors/: archivist.md  builder.md  failure-analyst.md  profiler.md  qa.md  refiner.md
eval/: score.py
factory/: analysis.py  backfill_archive.py  baseline.py  ceo_completion.py  checkpoint.py  clean_pr.py  cli.py  digest.py  events.py  insights.py  issue.py  models.py  precheck.py  profile.py  refactory.py  refine_state.py  research_index.py  review.py  sessions.py  state.py  store.py  strategy.py  study.py  summary.py  telemetry.py  user_config.py  worktree.py
factory/ace/: curator.py  injector.py  paths.py  reflector.py
factory/agents/: agents.yml  plugin.py  runner.py
factory/dashboard/: __init__.py  app.py
factory/discovery/: eval_spec.py  generate.py  introspect.py  profile.py  spec.py
factory/eval/: growth.py  guards.py  hygiene.py  runner.py
factory/obsidian/: notes.py  templates.py
factory/research/: leakage.py  runner.py
factory/runners/: __init__.py  _background.py  _stream.py  _subprocess.py  _tmux_persist.py  bob.py  claude.py  codex.py  opencode.py  protocol.py  usage.py
factory/templates/: score.py
factory/visualizer/: state.py
factory/workflow/: __init__.py  cli.py  definitions.py  events.py  executor.py  primitives.py  skill_export.py  validation.py
infra/langfuse/: README.md  clickhouse-disable-logs.xml  docker-compose.yml
scripts/: .gitignore  analyze_trace.py  langfuse-setup  sentrux-check.sh  sync_agents.py
scripts/langfuse/: .gitignore  README.md  langfuse_client.py  pull_langfuse_trace.py  snake_build_trace_analysis.md
skills/pipeline/: SKILL.md
skills/pipeline-subagents/: SKILL.md
skills/workflow-build/: SKILL.md
skills/workflow-design/: SKILL.md
skills/workflow-discover/: SKILL.md
skills/workflow-improve/: SKILL.md
skills/workflow-qa/: SKILL.annotations.yaml  SKILL.md
templates/: factory_config.md
tests/: conftest.py  test_ace.py  test_ace_counters.py  test_ace_paths.py  test_agents.py  test_analysis.py  test_backfill_archive.py  test_background.py  test_baseline.py  test_ceo_completion.py  test_ceo_message_events.py  test_checkpoint.py  test_clean_pr.py  test_cli.py  test_cli_export.py  test_cli_wizard.py  test_codex_runner.py  test_dashboard.py  test_digest.py  test_discovery.py  test_discovery_spec.py  test_eval_growth.py  test_eval_spec.py  test_eval_spec_classify.py  test_eval_weights.py  test_event_enrichment.py  test_events.py  test_guards.py  test_hard_constraints.py  test_hygiene_architecture.py  test_inner_outer_loop.py  test_insights.py  test_installer.py  test_issue.py  test_leakage.py  test_log_command.py  test_models.py  test_obsidian.py  test_pipeline_prompt.py  test_playbook_hygiene.py  (+35 more)
(+66 files in other folders)
