[project]
name = "remote-factory"
version = "0.1.0"
description = "Domain-agnostic multi-agent software evolution loop"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "structlog>=24.0", "fastapi>=0.115", "uvicorn[standard]>=0.34"]

[project.scripts]
factory = "factory.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.10", "pytest-cov>=5.0", "httpx>=0.27"]
